@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.034.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.041.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Util-CommandLine",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Util::CommandLine",
@@ -30,9 +29,10 @@ my %WriteMakefileArgs = (
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0
+    "Test::Most" => 0,
+    "blib" => "1.01"
   },
-  "VERSION" => "1.02",
+  "VERSION" => "1.03",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -40,7 +40,6 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Getopt::Long" => 0,
   "IO::Handle" => 0,
@@ -49,6 +48,7 @@ my %FallbackPrereqs = (
   "Proc::PID::File" => 0,
   "Test::More" => 0,
   "Test::Most" => 0,
+  "blib" => "1.01",
   "constant" => 0,
   "strict" => 0,
   "warnings" => 0
