@@ -1,6 +1,7 @@
 Revision history for Util::CommandLine
 
 {{$NEXT}}
+        - Try multiple locations for the singleton PID file before deathing
 
 1.02      2015-06-30 06:32:53-07:00 America/Los_Angeles
         - Small POD improvement.
